Fix spacing of various items in lower resolutions

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     display: flex;
     flex-direction: column;
-    margin: 0 230px;
+    margin: 0 20vh;
     font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(12, 12, 12);
 }
@@ -25,6 +25,7 @@ body {
 .navigation {
     display: flex;
     justify-content: space-between;
+    gap: 40%;
 }
 
 .navigation h3 {
@@ -48,6 +49,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     padding: 80px 0;
+    gap: 100px;
 }
 
 .main-info h1 {
@@ -66,6 +68,7 @@ ul {
 .main-info img {
     height: auto;
     width: 400px;
+    flex: auto;
 }
 
 .main-info button {
